Tweak score tolerance in repro: add [OK*] (#2860)